# risc0-browser-stark-poc

./: .gitignore
cairo-browser-proof/prover-wasm/: Cargo.toml
cairo-browser-proof/prover-wasm/src/: lib.rs
cairo-browser-proof/web/: package-lock.json  package.json
cairo-browser-proof/web/src/: App.tsx
simple-web-app/: README.md  run_web.sh
simple-web-app/docs/: feasibility.md
simple-web-app/guest/: Cargo.toml
simple-web-app/guest/src/: main.rs
simple-web-app/host/: Cargo.toml
simple-web-app/host/pkg/: browser_prover_bg.wasm
simple-web-app/host/src/: lib.rs
simple-web-app/web/: index.html  package-lock.json  package.json  vite.config.ts
simple-web-app/web/public/: guest.elf
simple-web-app/web/src/: index.ts
simple-web-app/web/src/pkg/: browser_prover.js  browser_prover_bg.wasm  browser_prover_bg.wasm.d.ts
simple-web-app/web/src/pkg/pkg/: browser_prover.d.ts  browser_prover.js
stwo-simple-poc/: Cargo.toml  README.md  server.js
stwo-simple-poc/src/: lib.rs
stwo-simple-poc/www/: index.html  package-lock.json  package.json  vite.config.ts  worker.js
stwo-simple-poc/www/src/: App.tsx  worker.ts
zk-age-check/: README.md
zk-age-check/app/: package-lock.json  package.json  vite.config.ts
zk-age-check/app/src/: App.css  App.tsx
zk-age-check/prover/: Cargo.toml
zk-age-check/prover/src/: lib.rs
