[package]
name = "stwo-simple-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.13"
num-traits = "0.2"
bincode = "1.3"
web-sys = { version = "0.3", features = ["Window", "Performance"] }

# Path dependencies to vendored crates
stwo = { path = "vendor/stwo/crates/stwo", features = ["prover"] }
stwo-constraint-framework = { path = "vendor/stwo/crates/constraint-framework", features = ["prover"] }