[package]
name = "stwo-simple-poc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.13"
num-traits = "0.2"
bincode = "1.3"
js-sys = "0.3"

# Use local patched versions. 
# We rely on "prover" but we have manually stripped 'rayon' from it in the vendor folder.
stwo = { path = "vendor/stwo/crates/stwo", default-features = false, features = ["prover", "std"] }
stwo-constraint-framework = { path = "vendor/stwo/crates/constraint-framework", default-features = false, features = ["prover", "std"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
