[package]
name = "browser_prover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
risc0-zkvm = { version = "1.1", default-features = false, features = ["std", "client", "prove"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
bincode = "1.3"

