[package]
name = "zk-age-check-prover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stwo = { git = "https://github.com/starkware-libs/stwo.git", rev = "2fdab765fd5bcb34d1535ed9ec3df7f58d39f20d", features = ["prover"] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo.git", rev = "2fdab765fd5bcb34d1535ed9ec3df7f58d39f20d", features = ["prover"] }
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.12"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
num-traits = "0.2.19"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
